Add styles for medium size screens

--- a/index.html
+++ b/index.html
@@ -22,30 +22,31 @@
     <div>
       <i class="fab fa-youtube fa-3x"></i>
       <h3>YouTube</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, ab?</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque voluptas unde id iste, optio architecto.
+      </p>
     </div>
 
     <div>
       <i class="fas fa-chalkboard-teacher fa-3x"></i>
       <h3>Courses</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, ab?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam minima ex explicabo pariatur recusandae dolorum at earum perspiciatis possimus.</p>
     </div>
 
     <div>
       <i class="fas fa-briefcase fa-3x"></i>
       <h3>Freelancing projects</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, ab?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nostrum vel error amet officia velit quasi? Consequuntur, iste.</p>
     </div>
   </section>
 
   <!-- About -->
   <section class="about">
     <div class="wrapper">
-      <div>
-        <i class="fas fa-laptop-code fa-8x"></i>
+      <div class="media center">
+        <i class="fas fa-laptop-code fa-10x"></i>
       </div>
 
-      <div>
+      <div class="about-text">
         <h3>About me</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem fugit aut dolor nesciunt laudantium, nisi molestias molestiae laborum! Voluptatum delectus esse explicabo, qui amet fuga.</p>
       </div>
